<resources>
    <string name="app_name">Sean</string>
    <string name="find_beer">Find Beer</string>
    <string name="brands">No beer selected</string>
    <string-array name="beer_brands">
        <item>Mild</item>
        <item>Strong</item>
        <item>Light</item>
        <item>Extra strong</item>
    </string-array>

    <string name="stopwatch">Stop Watch</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="reset">Reset</string>

    <string name="frame">Test Frame</string>
    <string name="duck">It is a duck</string>

    <string name="webapp">Web view</string>


    <string name="message">Messenger</string>
    <string name="to_label">To:</string>
    <string name="email_hint">Enter email address</string>
    <string name="subj_hint">Subject</string>
    <string name="message_hint">Message</string>
    <string name="sendButton">Send</string>

    <string name="work_out">Work Out App</string>
    <string name="details_btn">Show Details</string>

    <string name="workout_title">Title</string>
    <string name="workout_des">Description</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="tab_switcher">Tab Switcher</string>
    <string name="no_tabs">No Tabs Available</string>
    <string name="text">Text</string>
    <string name="title_activity_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_tab_settings">TabSettings</string>


</resources>