<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Spinner
        android:id="@+id/color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:entries="@array/beer_brands"
        android:layout_margin="16dp"/>

    <Button
        android:id="@+id/findBeer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:onClick="onClickFindBeer"
        android:text="@string/find_beer"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/beerId"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:text="@string/brands"/>

    <Button
        android:id="@+id/stop_watch"
        android:layout_marginTop="30dp"
        android:text="@string/stopwatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickStopWatch"/>

    <Button
        android:id="@+id/frame_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickFrame"
        android:text="@string/frame" />

    <Button
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message"
        android:onClick="onClickMessage"/>

    <Button
        android:id="@+id/work_outBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/work_out"
        android:onClick="onClickWorkOut"/>

    <Button
        android:id="@+id/web_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/webapp"
        android:onClick="onClickWeb"/>



</LinearLayout>